# fasting-rust

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml  fasting_app.db  fasting_app_backup.db  handlers_tests.rs  notes.md
fasting_rust/: Cargo.toml  diesel.toml
migrations/2024-10-03-041444_create_users/: up.sql
migrations/2024-10-03-041554_create_fasting_sessions/: up.sql
migrations/2024-10-13-172313_create_fasting_events/: down.sql  up.sql
migrations/2024-12-01-013608_add_device_id_to_users/: down.sql  up.sql
migrations/2024-12-30-023255_create_fasting_sessions/: down.sql  up.sql
migrations/2024-12-30-024212_create_fasting_sessions/: up.sql
migrations/2025-01-05-001259_create_fasting_goals/: down.sql  up.sql
migrations/2025-01-06-013911_create_users/: up.sql
migrations/2025-01-06-013952_create_fasting_sessions/: up.sql
migrations/2025-01-06-014034_create_fasting_goals/: up.sql
migrations/2025-01-10-020752_fasting_events/: up.sql
migrations/2025-01-17-020831_fasting_sessions/: up.sql
migrations/2025-01-18-022210_create_initial_schema/: down.sql  up.sql
migrations/2025-01-18-022953_fasting_sessions/: down.sql  up.sql
migrations/2025-01-19-005745_alter_users/: down.sql  up.sql
migrations/2025-01-23-040113_users/: up.sql
migrations/2025-01-23-040236_fasting_sessions/: up.sql
migrations/2025-01-23-040407_fasting_events/: up.sql
src/: db.rs  errors.rs  export.rs  handlers.rs  lib.rs  main.rs  models.rs  notifications.rs  schema.rs  temp_handlers.rs  utils.rs
src/handlers/: analytics.rs  mod.rs  (+4 more)
tests/: db_tests.rs  handlers_tests.rs
(+23 files in other folders)
