[package]
name = "fasting_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.4", features = ["r2d2", "sqlite"] }
libsqlite3-sys = "0.25.1"
dotenv = "0.15"
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde", "std"] }
notify-rust = "0.8"
structopt = "0.3"
schema = "0.1.0"