[package]
name = "fasting-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
rocket_sync_db_pools = { version = "0.1.0-rc.2" }
diesel = { version = "2.2.5", features = ["r2d2", "sqlite", "chrono"] }
libsqlite3-sys = "0.25.1"
dotenv = "0.15"
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde", "std"] }
notify-rust = "0.8"
structopt = "0.3"
schema = "0.1.0"